--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -35,7 +35,7 @@
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
           </span>
         </div>
       </div>
@@ -124,7 +124,7 @@
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
           </span>
         </div>
       </div>
@@ -310,7 +310,7 @@
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/platform/architecture-and-tech-stack/platform-as-a-service.html" target="_blank">Get DX Cloud</a>
           </span>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
         </div>
       </div>
     </div>
@@ -372,7 +372,7 @@
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
           </span>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
         </div>
       </div>
     </div>
@@ -435,7 +435,7 @@
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
           </span>
         </div>
       </div>
@@ -498,7 +498,7 @@
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
           </span>
         </div>
       </div>
@@ -561,7 +561,7 @@
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
           </span>
         </div>
       </div>
@@ -621,7 +621,7 @@
         <div class="navbar-item navbar-item--button">
           <span class="control">
             <a class="button is-primary" href="https://www.magnolia-cms.com/get-started.html" target="_blank">Get Magnolia</a>
-          <button id="themeToggle" onClick="toggleTheme()"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
+          <button id="themeToggle"><i id="themeIcon" class="fa fa-moon-o" aria-hidden="true"></i></button>
           </span>
         </div>
       </div>
