--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -676,7 +676,7 @@
 }
 
 .doc .sidebarblock {
-  background: var(--rebrand-color-primary-sand);
+  background: var(--sidebar-background);
   /* border-radius: 0.75rem; */
   padding: 0.45rem 1.5rem;
   /* box-shadow: 0 10px 13px -7px #000000c5, 1px 0 3px 4px rgba(0, 0, 0, 0); */
