--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -502,6 +502,16 @@
 
           <div class="column is-4-widescreen is-6-desktop is-6-tablet">
             <div class="card-x">
+              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Headless</h3>
+              <p class="card-x__p"> Create flexible, multi-channel experiences with Magnolia's headless architecture and light development, perfect for seamless integration and rapid innovation.</p>
+              <div class="card-x__link-w">
+                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/developing/headless/">Learn more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="column is-4-widescreen is-6-desktop is-6-tablet">
+            <div class="card-x">
               <h3 class="card-x__title h3"><i class="fa fa-pencil" aria-hidden="true"></i> Authors</h3>
               <p class="card-x__p">Focus on using Magnolia by getting to know Admincentral. Get acquainted with editing pages, managing assets, and publishing your updates.</p>
               <div class="card-x__link-w">
@@ -509,17 +519,6 @@
               </div>
             </div>
           </div>
-
-          <div class="column is-4-widescreen is-6-desktop is-6-tablet">
-            <div class="card-x">
-              <h3 class="card-x__title h3"><i class="fa fa-cogs" aria-hidden="true"></i> Administrators</h3>
-              <p class="card-x__p">Digital experience administrators make key decisions on setup, user management, technical requirements, and security while guiding developers and monitoring overall user experience.</p>
-              <div class="card-x__link-w">
-                <a class="card-x__link link" href="{{{siteRootPath}}}/product-docs/administration/">Learn more</a>
-              </div>
-            </div>
-          </div>
-          
          
           
         </div>
