--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -890,7 +890,7 @@ pre code a:hover {
 
 .d-get {
   font-size: smaller;
-  background: blue;
+  background: #4bade8;
   color: white;
   padding: 4px;
   border-radius: 4px;
