--- a/src/layouts/new-home.hbs
+++ b/src/layouts/new-home.hbs
@@ -30,7 +30,7 @@
     }
 
     .hero.has-image .hero-body {
-      background-image: url("{{{uiRootPath}}}/img/hero-image.png");
+      background-image: url("{{{uiRootPath}}}/img/core-visual-hero-books.png");
       background-repeat: no-repeat;
       background-size: 1034px 546px;
       background-position: 100px top;
