paas support on nav head

--- a/src/partials/header-content.hbs
+++ b/src/partials/header-content.hbs
@@ -297,6 +297,7 @@
 
       <div class="navbar-end">
         <a href="{{{siteRootPath}}}/paas/changelog/" class="navbar-item"><i class="fa fa-list-alt" aria-hidden="true" style="margin-right: 5px;"></i> Changelog</a>
+        <a href="{{{siteRootPath}}}/paas/support/" class="navbar-item"><i class="fa fa-life-ring" aria-hidden="true" style="margin-right: 5px;"></i> Support</a>
         <a href="{{{siteRootPath}}}/product-docs/6.3/" class="navbar-item">DX Core</a>
         {{!-- <a href="{{{siteRootPath}}}/paas/index.html" class="navbar-item">PaaS</a> --}}
         <div class="navbar-item navbar-item--button">
