--- a/src/partials/footer-content.hbs
+++ b/src/partials/footer-content.hbs
@@ -51,4 +51,13 @@
         <a href="https://www.magnolia-cms.com/legal/accessiblity-statement.html" target="_blank" rel="noreferrer, noopener" style="font-size: smaller;" aria-label="Read Magnolia's official Accessibility Statement">Accessibility statement</a>
     </p>
 </div>
+
+<biel-button 
+    project="lpzegb0ejk"
+    header-title="Biel.ai Chatbot"
+    button-position="bottom-right"
+    modal-position="sidebar-right"
+    button-style="light">
+    Ask AI
+</biel-button>
 {{/if}}
