--- a/src/partials/head-scripts.hbs
+++ b/src/partials/head-scripts.hbs
@@ -32,4 +32,5 @@
 });
 
 </script>
-
+<link rel="stylesheet"href="https://cdn.jsdelivr.net/npm/biel-search/dist/biel-search/biel-search.css">
+<script type="module" src="https://cdn.jsdelivr.net/npm/biel-search/dist/biel-search/biel-search.esm.js"></script>
