--- a/src/partials/head-meta.hbs
+++ b/src/partials/head-meta.hbs
@@ -2,4 +2,4 @@
     <meta name="description" content="Explore Magnolia CMS documentation for comprehensive guides and resources on implementing, integrating, and using Magnolia effectively.">
     <meta property="og:title" content="Magnolia CMS Documentation">
     <meta property="og:description" content="Explore Magnolia CMS documentation for comprehensive guides and resources on implementing, integrating, and using Magnolia effectively.">
-    <meta property="og:image" content="https://docs.magnolia-cms.com/welcome/_images/meta-og-2024.png">
+    <meta property="og:image" content="{{site.url}}/home/_images/meta-og-2024.png">
